# src/generated/openapi/java/com/example/openapi/model/DocumentCreateRequest.java
@@ -1,0 +1,133 @@
+/*
+ * Persons API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.example.openapi.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import com.fasterxml.jackson.annotation.*;
+import io.micronaut.serde.annotation.Serdeable;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
+import io.micronaut.core.annotation.Nullable;
+import jakarta.annotation.Generated;
+
+/**
+ * DocumentCreateRequest
+ */
+@JsonPropertyOrder({
+    DocumentCreateRequest.JSON_PROPERTY_TITLE,
+    DocumentCreateRequest.JSON_PROPERTY_TEXT,
+})
+@Serdeable
+@Generated("io.micronaut.openapi.generator.JavaMicronautServerCodegen")
+public class DocumentCreateRequest {
+
+    public static final String JSON_PROPERTY_TITLE = "title";
+    public static final String JSON_PROPERTY_TEXT = "text";
+
+    @NotNull
+    @Size(min = 1, max = 255)
+    @JsonProperty(JSON_PROPERTY_TITLE)
+    private String title;
+
+    @NotNull
+    @Size(min = 1)
+    @JsonProperty(JSON_PROPERTY_TEXT)
+    private String text;
+
+    public DocumentCreateRequest(String title, String text) {
+        this.title = title;
+        this.text = text;
+    }
+
+    /**
+     * @return the title property value
+     */
+    public String getTitle() {
+        return title;
+    }
+
+    /**
+     * Set the title property value
+     *
+     * @param title property value to set
+     */
+    public void setTitle(String title) {
+        this.title = title;
+    }
+
+    /**
+     * Set title in a chainable fashion.
+     *
+     * @return The same instance of DocumentCreateRequest for chaining.
+     */
+    public DocumentCreateRequest title(String title) {
+        this.title = title;
+        return this;
+    }
+
+    /**
+     * @return the text property value
+     */
+    public String getText() {
+        return text;
+    }
+
+    /**
+     * Set the text property value
+     *
+     * @param text property value to set
+     */
+    public void setText(String text) {
+        this.text = text;
+    }
+
+    /**
+     * Set text in a chainable fashion.
+     *
+     * @return The same instance of DocumentCreateRequest for chaining.
+     */
+    public DocumentCreateRequest text(String text) {
+        this.text = text;
+        return this;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+        var documentCreateRequest = (DocumentCreateRequest) o;
+        return Objects.equals(this.title, documentCreateRequest.title)
+            && Objects.equals(this.text, documentCreateRequest.text);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(title, text);
+    }
+
+    @Override
+    public String toString() {
+        return "DocumentCreateRequest("
+            + "title: " + getTitle() + ", "
+            + "text: " + getText()
+            + ")";
+    }
+
+}
